--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.48.2",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "sass": "^1.69.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
